# pick-a-boo

./: .bumpversion.toml  .gitignore  Cargo.toml  README.md
.github/workflows/: build.yaml  publish.yaml  update-version.yaml
examples/: alternate_screen.rs  chooser.rs  simple_chooser.rs  yes_or_no.rs
macros/: Cargo.toml  README.md
macros/src/: lib.rs
src/: lib.rs  routine.rs  screen.rs
