[package]
name = "pick-a-boo"
version = "0.1.4"
edition = "2024"
authors = [
    "Haruaki Tamada <tamada@users.noreply.github.com>"
]
description = "A simple options picker library for the CLI"
license = "MIT"
readme = "README.md"
repository = "https://github.com/tamada/pick-a-boo"
keywords = ["yes-or-no", "cli", "options", "choices"]
categories = ["command-line-interface", "command-line-utilities"]

[dependencies]
crossterm = "0.29.0"
derive_builder = "0.20.2"
log = "0.4.29"
pick-a-boo-macros = "0.1.0"

[workspace]
members = [ "macros" ]
